--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,4 +25,6 @@
         </activity>
         <activity android:name=".PointView" android:label="Points"/>
     </application>
+    <uses-permission
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
